--- a/ClassyClash/ClassyClash/ClassyClash.vcxproj
+++ b/ClassyClash/ClassyClash/ClassyClash.vcxproj
@@ -159,9 +159,13 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ClassyClash.cpp" />
+    <ClCompile Include="Enemy.cpp" />
+    <ClCompile Include="Prop.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="Enemy.h" />
+    <ClInclude Include="Prop.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
