--- a/ClassyClash/ClassyClash/ClassyClash.vcxproj
+++ b/ClassyClash/ClassyClash/ClassyClash.vcxproj
@@ -157,12 +157,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BaseCharacter.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="ClassyClash.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Prop.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseCharacter.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Prop.h" />
